# noorm

./: Cargo.toml  LICENSE  README.md  text.tx
benches/: benchmarks.rs
noorm-gen/: Cargo.toml
noorm-gen/src/: main.rs
src/: lib.rs
src/parser/: errors.rs  langfactory.rs  langgen.rs  langgen_dummy.rs  langgen_javascript.rs  langgen_python.rs  langgen_rust.rs  mod.rs  parser.rs
tests/: integraion_tests.rs
